k8s-yaml/solarkraft-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solarkraft-test-ingress
  namespace: solarkraft-test
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
    nginx.ingress.kubernetes.io/proxy-buffers-number: "16"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "256k"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
spec:
  ingressClassName: nginx
  rules:
  - host: solarkraft-test.poweron.software
    http:
      paths:
      - backend:
          service:
            name: odoo
            port:
              number: 8069
        path: /
        pathType: Prefix
  - host: solarkraft-test.poweron.software
    http:
      paths:
      - backend:
          service:
            name: odoo
            port:
              number: 8072
        path: /longpolling/
        pathType: Prefix
  tls:
  - hosts:
    - rec1.re-cloud.io
    secretName: solarkraft-test-tls
status:
  loadBalancer:
    ingress:
    - ip: 148.251.195.98
    - ip: 88.99.145.186
    - ip: 88.99.162.52
